--- a/views/main.hbs
+++ b/views/main.hbs
@@ -5,6 +5,27 @@
     <meta charset="utf-8" />
 </head>
 <body>
+    <a href="/logout">Выйти</a>
     <h1>Мои файлы {{ user.username }}</h1>
+    <table>
+        <tr>
+            <th>Filename</th>
+            <th>Date</th>
+            <th>Image</th>
+        </tr>
+        {{#each images}}
+            <tr>
+                <td>{{this.filename}}</td>
+                <td>{{this.createAt}}</td>
+                <td>
+                    <img src="/{{this.filename}}" style="max-width: 100px;" />
+                </td>
+            </tr>
+        {{/each}}
+    </table>
+    <form method="POST" enctype="multipart/form-data" action="/upload">
+        <input type="file" name="file">
+        <input type="submit" value="Submit">
+    </form>
 </body>
 <html>
