--- a/views/main.hbs
+++ b/views/main.hbs
@@ -19,7 +19,7 @@
                 <td>{{this.filename}}</td>
                 <td>{{this.createdAt}}</td>
                 <td>
-                    <img src="/{{this.filename}}" style="max-width: 100px;" />
+                    <img src="./uploads/{{this.filename}}" style="max-width: 100px;" />
                 </td>
             </tr>
         {{/each}}
